# kairon-dfir

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  STATE.md  deploy.sh  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/analysis/: __init__.py  activities.py  semi_auto.py  suspicious.py  timeline.py
backend/app/api/: routes_activity.py  routes_cases.py  (+20 more)
backend/tests/: test_beta_operations.py  test_canonical_process_entities.py  test_canonical_process_tree.py  test_case_context.py  test_case_state.py  test_command_history.py  test_correlation_metadata.py  test_demo_pack.py  test_detections_bulk_v2.py  test_docs.py  test_email_artifacts.py  test_event_identity.py  test_event_markings.py  test_evidence_storage.py  test_evtx_backend.py  test_evtx_profile.py  test_field_quality.py  test_findings.py  test_host_attribution.py  test_host_identity.py  test_hunting_rules.py  test_indexing_profiles.py  test_indicator_resolution.py  test_ingest.py  test_ingest_regression.py  test_memory_active_result.py  test_memory_analysis.py  test_memory_artifact_normalizers.py  test_memory_batch_runtime.py  test_memory_batch_uuid_alignment.py  test_memory_blocked_symbols_acquisition.py  test_memory_bounded_discovery.py  test_memory_canonical_recovery.py  test_memory_confirmation.py  test_memory_evidence_access.py  test_memory_experimental_active_result.py  test_memory_experimental_cli.py  test_memory_experimental_compose.py  test_memory_experimental_import_runtime.py  test_memory_experimental_indexing.py  (+69 more)
(+699 files in other folders)
