[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dfir-platform-backend"
version = "0.1.0"
description = "Kairon DFIR backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "psycopg[binary]>=3.1.19",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "python-multipart>=0.0.9",
  "redis>=5.0.4",
  "rq>=1.16.2",
  "opensearch-py>=2.5.0",
  "python-dateutil>=2.9.0",
  "python-registry>=1.3.1",
  "python-evtx>=0.8.1",
  "xpress-lz77>=1.0.1",
  "PyYAML>=6.0.1",
  "orjson>=3.10.3",
  "olefile>=0.47",
  "reportlab>=4.2.2",
  "psutil>=6.0.0",
  "yara-python>=4.5.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
